Added all html files in navbar

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <!--Navigation Bar--> 
     <div class="navbar">
-        <a class="active" href="#home">Home</a>
-        <a href="#resume">Resume</a>
-        <a href="#projects">Projects</a>
-        <a href="#aboutme">About Me</a>
-        <a href="#contact">Contact</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="resume.html">Resume</a>
+        <a href="projects.html">Projects</a>
+        <a href="about.html">About Me</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <!--Hero--> 
@@ -39,40 +39,41 @@
 
     <!--Big Nav Links--> 
     <div class="bignavbar">
-        <a href="#resume">
+        <a href="resume.html">
             <div class="bigresume">
                 <h2>Resume</h2>
                 <!--Insert resume image--> 
             </div>
         </a>
-        <a href="#projects">
+        <a href="projects.html">
             <div class="bigprojects">
                 <h2>Projects</h2>
                 <!--Insert project image--> 
             </div>
         </a>
-        <a href="#aboutme">
+        <a href="about.html">
             <div class="bigaboutme">
                 <h2>About Me</h2>
                 <!--Insert about me image--> 
             </div>
         </a>
-        <a href="#contact">
+        <a href="contact.html">
             <div class="bigcontact">
                 <h2>Contact</h2>
                 <!--Insert contact image--> 
             </div>
         </a>
-
-        <!--FootNav--> 
-        <div class="footnav">
-            <a href="https://www.instagram.com/calista.kirchhoff">Instagram</a>
-            <a href="https://www.tiktok.com/@calistakirchhoff">TikTok</a>
-            <a href="https://www.linkedin.com/in/calista-kirchhoff-179983320/">LinkedIn</a>
-            <a href="https://app.joinhandshake.com/profiles/hxqy9x">Handshake</a>
-        </div>
-        <!--Create and insert clickable icons-->
     </div>
+
+    <!--FootNav--> 
+    <div class="footnav">
+        <a href="https://www.instagram.com/calista.kirchhoff">Instagram</a>
+        <a href="https://www.tiktok.com/@calistakirchhoff">TikTok</a>
+        <a href="https://www.linkedin.com/in/calista-kirchhoff-179983320/">LinkedIn</a>
+        <a href="https://app.joinhandshake.com/profiles/hxqy9x">Handshake</a>
+    </div>
+    <!--Create and insert clickable icons-->
+    
 </body>
 
 </html>
