created intital css file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" type = "text/css" href = "styles.css">
     <title>Engineering Portfolio Website</title>
 </head>
 
@@ -11,7 +12,7 @@
 
     <!--Navigation Bar--> 
     <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
         <a href="about.html">About Me</a>
@@ -19,7 +20,7 @@
     </div>
 
     <!--Hero--> 
-    <div class="hero">
+    <div class= "hero">
         <h1>Calista Kirchhoff</h1>
         <h3>Mechanical, Electrical, and Computer Engineering | Aerospace Enthusiast</h3>
         <!--Insert hero image--> 
@@ -30,7 +31,7 @@
         <h2>Welcome</h2>
         <p>This portfolio website is a space to showcase the skills I am currently learning
             through hands-on projects. In fact, this website itself is a project build from
-            scratch.<br>Enjoy the journey of engineering school with me here and on social media
+            scratch.<br><br>Enjoy the journey of engineering school with me here and on social media
             with the links provided below.</p>
     </div>
     <div class="timeline">
