--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" type = "text/css" href = "styles.css">
     <title>Engineering Portfolio Website Projects Page</title>
 </head>
 <body>
@@ -17,8 +18,10 @@
     </div>
 
     <!--Current Message-->
-    <h1>Coming Soon!</h1>
-    <h3>Creating Media of Current Projects</h3>
+    <div class = "header">
+        <h1>Coming Soon!</h1>
+        <h3>Creating Media of Current Projects</h3>
+    </div>
 
     <!--FootNav--> 
     <div class="footnav">
