--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" type = "text/css" href = "styles.css">
     <title>Engineering Portfolio Website Resume Page</title>
 </head>
 <body>
@@ -18,10 +19,10 @@
 
     <div class = "header">
         <h1>Resume Fall 2025</h1>
+        <!--PDF of Resume-->
+        <iframe src = "Resume 2025 Revised copy.pdf" title = "Resume PDF" 
+        width = "100%" height = "830px"></iframe>
     </div>
-    <!--PDF of Resume-->
-    <iframe src = "Resume 2025 Revised copy.pdf" title = "Resume PDF" 
-    width = "auto" height = "500px"></iframe>
 
         <!--FootNav--> 
     <div class="footnav">
