--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" type = "text/css" href = "styles.css">
     <title>Engineering Portfolio Website Contact Page</title>
 </head>
+
 <body>
 
-        <!--Navigation Bar--> 
+    <!--Navigation Bar-->
     <div class="navbar">
         <a class="active" href="index.html">Home</a>
         <a href="resume.html">Resume</a>
@@ -17,28 +20,30 @@
     </div>
 
     <!--Contact Form-->
-    <h1 class = "header">Contact Form</h1>
-    <form action = "https://formsubmit.co/calista.f.kirchhoff-1@ou.edu" method = "POST">
-        <label for = "fullname">Full Name:</label>
-        <input type = "text" id = "fullname" name = "fullname"><br><br>
+    <div class = "header">
+        <h1>Contact Form</h1>
+        <form action="https://formsubmit.co/calista.f.kirchhoff-1@ou.edu" method="POST">
+            <label for="fullname">Full Name:</label>
+            <input type="text" id="fullname" name="fullname"><br><br>
 
-        <label for = "email">Email Address:</label>
-        <input type = "email" id = "email" name = "email"><br><br>
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email"><br><br>
 
-        <label for = "number">Phone Number:</label>
-        <input type = "text" id = "number" name = "number"><br><br>
+            <label for="number">Phone Number:</label>
+            <input type="text" id="number" name="number"><br><br>
 
-        <label for = "company">Company (if applicable):</label>
-        <input type = "text" id = "company" name = "company"><br><br>
+            <label for="company">Company (if applicable):</label>
+            <input type="text" id="company" name="company"><br><br>
 
-        <label for = "message">Message:</label>
-        <input type = "text" id = "message" name = "message"><br><br>
+            <label for="message">Message:</label>
+            <input type="text" id="message" name="message"><br><br>
 
-        <input type = "submit" value = "Submit">
-    </form>
-    <h3>Talk to you soon!</h3>   
+            <input type="submit" value="Submit">
+        </form>
+        <h3>Talk to you soon!</h3>    
+    </div>
 
-        <!--FootNav--> 
+    <!--FootNav-->
     <div class="footnav">
         <a href="https://www.instagram.com/calista.kirchhoff">Instagram</a>
         <a href="https://www.tiktok.com/@calistakirchhoff">TikTok</a>
@@ -48,4 +53,5 @@
     <!--Create and insert clickable icons-->
 
 </body>
+
 </html>
