Finshed basic website, must create and add project media

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 <body>
 
     <!--Navigation Bar--> 
-    <div class="navbar">
-        <a href="index.html">Home</a>
+    <nav>
+        <a class = "active" href="index.html">Home</a>
         <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
         <a href="about.html">About Me</a>
         <a href="contact.html">Contact</a>
-    </div>
+    </nav>
 
     <!--Hero--> 
     <div class= "hero">
+        <img class = "biglogo" src = "Main Logo.svg" alt = "Logo">
         <h1>Calista Kirchhoff</h1>
         <h3>Mechanical, Electrical, and Computer Engineering | Aerospace Enthusiast</h3>
         <!--Insert hero image--> 
@@ -40,40 +41,35 @@
 
     <!--Big Nav Links--> 
     <div class="bignavbar">
-        <a href="resume.html">
-            <div class="bigresume">
-                <h2>Resume</h2>
-                <!--Insert resume image--> 
-            </div>
+        <!--Resume Block-->
+        <a class ="bigresume" href="resume.html">
+                <img class = "resumeicon" src = "resume icon.svg" alt = "Resume Icon"><h2>Resume</h2>
         </a>
-        <a href="projects.html">
-            <div class="bigprojects">
-                <h2>Projects</h2>
-                <!--Insert project image--> 
-            </div>
+        <!--Projects Block-->
+        <a class="bigprojects" href="projects.html">
+                <img class = "projectsimage" src = "Robot Part copy.png" alt = "Project Image"><h2>Projects</h2>
         </a>
-        <a href="about.html">
-            <div class="bigaboutme">
-                <h2>About Me</h2>
-                <!--Insert about me image--> 
-            </div>
+        <!--About Me Block-->
+        <a class="bigaboutme" href="about.html">
+                <img class = "aboutmeimage" src = "about me image.png" alt = "About Me Image"><h2>About Me</h2>
         </a>
-        <a href="contact.html">
-            <div class="bigcontact">
-                <h2>Contact</h2>
-                <!--Insert contact image--> 
-            </div>
-        </a>
+        <!--Contact Block-->
+            <a class = "bigcontact" href="contact.html">
+                    <img class = "contacticon" src = "contact icon.svg" alt = "Contact Icon"><h2>Contact</h2>
+            </a>
     </div>
 
     <!--FootNav--> 
     <div class="footnav">
-        <a href="https://www.instagram.com/calista.kirchhoff">Instagram</a>
-        <a href="https://www.tiktok.com/@calistakirchhoff">TikTok</a>
-        <a href="https://www.linkedin.com/in/calista-kirchhoff-179983320/">LinkedIn</a>
-        <a href="https://app.joinhandshake.com/profiles/hxqy9x">Handshake</a>
+        <a  href="https://www.instagram.com/calista.kirchhoff" target = "_blank">
+            <img class = "instagram" src = "instagram icon.svg" alt = "Instagram Icon"></a>
+        <a href="https://www.tiktok.com/@calistakirchhoff" target = "_blank">
+            <img class = "tiktok" src = "tiktok icon.svg" alt = "Tiktok Icon"></a>
+        <a  href="https://www.linkedin.com/in/calista-kirchhoff-179983320/" target = "_blank">
+            <img class = "linkedin" src = "linkedin icon.svg" alt = "Linkedin Icon"></a>
+        <a  href="https://app.joinhandshake.com/profiles/hxqy9x" target = "_blank">
+            <img class = "handshake" src = "handshake icon.svg" alt = "Handshake Icon"></a>
     </div>
-    <!--Create and insert clickable icons-->
     
 </body>
 
