--- a/about.html
+++ b/about.html
@@ -9,19 +9,21 @@
 <body>
     
     <!--Navigation Bar--> 
-    <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+    <nav>
+        <a href="index.html">Home</a>
         <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
-        <a href="about.html">About Me</a>
+        <a class="active" href="about.html">About Me</a>
         <a href="contact.html">Contact</a>
-    </div>
+    </nav>
+
+    <!--Header-->
+    <h1 class = "header">About Me</h1>
 
     <!--Little Spiel-->
-    <h1 class = "header">About Me</h1>
     <div class = "aboutme">
         <div class = "column myphoto">
-            <img src = "portfolio headshot.jpg" alt = "Headshot">
+            <img class = "headshot" src = "portfolio headshot.jpg" alt = "Headshot">
         </div>
         <div class = "column spiel">
             <h4>Engineering Related</h4>
@@ -60,14 +62,17 @@
         </div>
     </div>
 
-        <!--FootNav--> 
+    <!--FootNav--> 
     <div class="footnav">
-        <a href="https://www.instagram.com/calista.kirchhoff">Instagram</a>
-        <a href="https://www.tiktok.com/@calistakirchhoff">TikTok</a>
-        <a href="https://www.linkedin.com/in/calista-kirchhoff-179983320/">LinkedIn</a>
-        <a href="https://app.joinhandshake.com/profiles/hxqy9x">Handshake</a>
+        <a  href="https://www.instagram.com/calista.kirchhoff" target = "_blank">
+            <img class = "instagram" src = "instagram icon.svg" alt = "Instagram Icon"></a>
+        <a href="https://www.tiktok.com/@calistakirchhoff" target = "_blank">
+            <img class = "tiktok" src = "tiktok icon.svg" alt = "Tiktok Icon"></a>
+        <a  href="https://www.linkedin.com/in/calista-kirchhoff-179983320/" target = "_blank">
+            <img class = "linkedin" src = "linkedin icon.svg" alt = "Linkedin Icon"></a>
+        <a  href="https://app.joinhandshake.com/profiles/hxqy9x" target = "_blank">
+            <img class = "handshake" src = "handshake icon.svg" alt = "Handshake Icon"></a>
     </div>
-    <!--Create and insert clickable icons-->
 
 </body>
 </html>
