--- a/projects.html
+++ b/projects.html
@@ -9,28 +9,31 @@
 <body>
 
     <!--Navigation Bar--> 
-    <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+    <nav>
+        <a href="index.html">Home</a>
         <a href="resume.html">Resume</a>
-        <a href="projects.html">Projects</a>
+        <a class="active" href="projects.html">Projects</a>
         <a href="about.html">About Me</a>
         <a href="contact.html">Contact</a>
-    </div>
+    </nav>
 
     <!--Current Message-->
-    <div class = "header">
+    <div class = "hero">
         <h1>Coming Soon!</h1>
         <h3>Creating Media of Current Projects</h3>
     </div>
 
     <!--FootNav--> 
     <div class="footnav">
-        <a href="https://www.instagram.com/calista.kirchhoff">Instagram</a>
-        <a href="https://www.tiktok.com/@calistakirchhoff">TikTok</a>
-        <a href="https://www.linkedin.com/in/calista-kirchhoff-179983320/">LinkedIn</a>
-        <a href="https://app.joinhandshake.com/profiles/hxqy9x">Handshake</a>
+        <a  href="https://www.instagram.com/calista.kirchhoff" target = "_blank">
+            <img class = "instagram" src = "instagram icon.svg" alt = "Instagram Icon"></a>
+        <a href="https://www.tiktok.com/@calistakirchhoff" target = "_blank">
+            <img class = "tiktok" src = "tiktok icon.svg" alt = "Tiktok Icon"></a>
+        <a  href="https://www.linkedin.com/in/calista-kirchhoff-179983320/" target = "_blank">
+            <img class = "linkedin" src = "linkedin icon.svg" alt = "Linkedin Icon"></a>
+        <a  href="https://app.joinhandshake.com/profiles/hxqy9x" target = "_blank">
+            <img class = "handshake" src = "handshake icon.svg" alt = "Handshake Icon"></a>
     </div>
-    <!--Create and insert clickable icons-->
     
 </body>
 </html>
