--- a/resume.html
+++ b/resume.html
@@ -9,29 +9,35 @@
 <body>
 
     <!--Navigation Bar--> 
-    <div class="navbar">
-        <a class="active" href="index.html">Home</a>
-        <a href="resume.html">Resume</a>
+    <nav>
+        <a href="index.html">Home</a>
+        <a class="active" href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
         <a href="about.html">About Me</a>
         <a href="contact.html">Contact</a>
-    </div>
+    </nav>
 
-    <div class = "header">
-        <h1>Resume Fall 2025</h1>
-        <!--PDF of Resume-->
+    <!--Content-->
+        <div class = "header">
+            <h1>Resume Fall 2025</h1>
+        </div>   
+        <!--PDF of Resume--> 
+        <div class = "PDF">
         <iframe src = "Resume 2025 copy.pdf" title = "Resume PDF" 
         width = "100%" height = "830px"></iframe>
-    </div>
+        </div>
 
-        <!--FootNav--> 
+    <!--FootNav--> 
     <div class="footnav">
-        <a href="https://www.instagram.com/calista.kirchhoff">Instagram</a>
-        <a href="https://www.tiktok.com/@calistakirchhoff">TikTok</a>
-        <a href="https://www.linkedin.com/in/calista-kirchhoff-179983320/">LinkedIn</a>
-        <a href="https://app.joinhandshake.com/profiles/hxqy9x">Handshake</a>
+        <a  href="https://www.instagram.com/calista.kirchhoff" target = "_blank">
+            <img class = "instagram" src = "instagram icon.svg" alt = "Instagram Icon"></a>
+        <a href="https://www.tiktok.com/@calistakirchhoff" target = "_blank">
+            <img class = "tiktok" src = "tiktok icon.svg" alt = "Tiktok Icon"></a>
+        <a  href="https://www.linkedin.com/in/calista-kirchhoff-179983320/" target = "_blank">
+            <img class = "linkedin" src = "linkedin icon.svg" alt = "Linkedin Icon"></a>
+        <a  href="https://app.joinhandshake.com/profiles/hxqy9x" target = "_blank">
+            <img class = "handshake" src = "handshake icon.svg" alt = "Handshake Icon"></a>
     </div>
-    <!--Create and insert clickable icons-->
     
 </body>
 </html>
